fix bug 106025. Patch by Bernd Buschinski. Thanks for the patch!

BUG: 106025
CCMAIL: b.buschinski@web.de